--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
                 {% endblock %}
             </div>
 
-            <div id="main-content">
+            <div class="main-content" id="classContent">
                 {% block content %}
                 {% endblock %}
             </div>
