--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -34,13 +34,13 @@
     cursor: pointer;
 }
   
-  .preset-select .option:hover {
+.preset-select .option:hover {
     background-color: #3a3a3a;
-  }
+}
   
 /* Main Chat*/
 .main-chat {
-    background-color: red;
+    background-color: none;
     width: 100%;
     max-width: 800px;
     height: 100%;
@@ -48,66 +48,86 @@
     flex-direction: column;
 }
 .messages-container {
-    background-color: green;
     width: 100%;
-    flex: 6; /* Height ratio to take up */
-    overflow-y: auto;
-    padding: 10px;
+    height: 70%;
     box-sizing: border-box;
+    border-left: 1px grey solid;
+    border-right: 1px grey solid;
 }
 .chat-bar-container {
-    background-color: blue;
     width: 100%;
-    flex: 5; /* Height ratio to take up */
-    overflow-y: auto;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: end;
+    height: 25%;
     box-sizing: border-box;
+    padding: 5px;
+    padding-bottom: 15px;
 }
-
-/* Search Bar Section */
 .chat-bar-wrapper {
-    background-color: #303030;
-    min-height: 100px;
-    max-height: 250px;
     width: 100%;
-    margin-bottom: 15px;
+    height: 100%;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    border-radius: 16px;
-    
 }
-.chat-bar {
-    width: 95%;
-    min-height: 50px;
-    max-height: 155px;
-    background-color: rgb(230, 0, 255);
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 3px;
-}
-.chat-bar textarea {
+.chat-bar-wrapper textarea {
     resize: none;
     border: none;
     outline: none;
+    color: white;
+    background-color: #303030;
     box-sizing: border-box;
-    width: 99%;
-    height: 100%;
-    background-color: orangered;
-    padding-top: 15px;
-    padding-bottom: 5px;
-    line-height: 1.4;
-    max-height: 150px;
+    width: 100%;
+    padding: 10px;
+    flex: 1;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 .chat-toolbar {
-    width: 95%;
-    height: 50px;
-    background-color: green;
+    height: 65x;
+    border-top: 1px grey solid;
+    background-color: #303030;
+    display: flex;
+    justify-content: end;
+    align-items: center;
     box-sizing: border-box;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.chat-toolbar .send {
+    background-color: white;
+    color: black;
+    overflow: visible;
+    margin-right: 10px;
+    height: 65%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.chat-toolbar .send:hover {
+    background-color: rgb(218, 218, 218);
+}
+.chat-toolbar img {
+    height: 90%;
+}
+
+/* MESSAGES SECTION */
+.messages-container {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    padding: 0 10px;
+    overflow-y: auto;
+}
+.user-message {
+    width: 100%;
+    display: flex;
+    justify-content: end;
+    margin: 12px 0 20px 0;
+    box-sizing: border-box;
+
+}
+.user-message .message {
+    padding: 15px;
+    background-color: #303030;
+    box-sizing: border-box;
+    border-radius: 10px;
 }
