started on settings page

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
 
             <!-- Bottom Control Panel -->
             <div class="bottom-control-panel control-panel" id="bottomControlPanel">
-                <button class="btn-settings">Settings</button>
+                <button class="btn-settings" id="btnSettings">Settings</button>
             </div>
 
         </div>
