--- a/templates/chat.html
+++ b/templates/chat.html
@@ -34,7 +34,8 @@
 
         <!-- MESSAGES SECTION -->
         <div class="messages-container">
-            <div class="message-user">
+
+            <div class="user-message">
                 <div class="message">write me a short story about bees</div>
             </div>
 
